Bug 504202 - P4Available changes (r+edwsmith)

P4 support is only needed for amd64 and x86 builds.