platform/unix/unixcpuid.cpp
@@ -38,15 +38,9 @@
 
 #include "avmplus.h"
 
-#ifdef AVMPLUS_ARM
+#ifdef FEATURE_NANOJIT
 
-bool P4Available() {
-	return false;
-}
-
-#else // AVMPLUS_ARM
-
-#ifndef AVMPLUS_AMD64
+#if defined(AVMPLUS_IA32)
 
 #define SSE_FLAG  0x02000000		// SSE flag is bit 25 of Feature Flags
 #define SSE2_FLAG 0x04000000		// SSE2 flag is bit 26 of Feature Flags
@@ -99,15 +93,15 @@ bool P4Available()
 		return true;
 	}
 	return false;
-} // IsCpuSSE2Ready()
+} // P4Available()
 
-#else // AVMPLUS_AMD64
+#elif defined(AVMPLUS_AMD64)
 
 bool P4Available()
 {
 	return true;
 }
 
-#endif // AVMPLUS_AMD64
+#endif
 
-#endif // AVMPLUS_ARM
+#endif // FEATURE_NANOJIT
